# TCI_AERO

./: .gitignore  README.md  README.txt  ROS2.gitignore  Tutoriel Crazyflie 2.0.md  testGit.py
AUTRES DOSSIERS/Comptes_rendus_seances_projet/: 27_10_25.md
AUTRES DOSSIERS/Crazyflie/: Documentation.md  Optitrack_node.py  example_code.py
AUTRES DOSSIERS/tortues/: package.xml
AUTRES DOSSIERS/ws_crazyDev/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
AUTRES DOSSIERS/ws_crazyDev/log/: latest_build
Comptes rendus de séances projet/27/10/: 27_10_25.md
Comptes rendus séances projet/: 27_10_25.md
Comptes_rendus_seances_projet/: Fil_rouge_projet.md  README.md
Crazyflie/: Crazyflie_control_node.py  Documentation.md  Installation client.md  crazyflie_control_node.py
Crazyflie documentation/: Untitled Document 1
Informations et documents/: Pitch final.pptx  Scénarios.docx  Tutoriel Crazyflie 2.0.md
Nouveau dossier/ws_drones/src/crazyflie/: package.xml  setup.py
Nouveau dossier/ws_drones/src/crazyflie/crazyflie/: Control_node.py
Nouveau dossier/ws_simu/src/: fix_turtlesim_imports2.py
code_packages/pid_control/: setup.py
code_packages/pid_control/pid_control/: pid_control_node.py  pid_control_node_example.py
src/my_package/: package.xml  setup.py
ws_drones/: .gitignore  ROS2.gitignore
ws_drones/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_drones/log/: latest_build
ws_simu/: crazyflie_driver.py
ws_simu/install/: local_setup.sh  setup.sh
ws_simu/log/: latest_build
ws_simu/src/my_package/: setup.py  (+1 more)
(+244 files in other folders)
